<resources>
    <string name="about">About</string>
    <string name="about_copyright" />
    <string name="accept">Agree</string>
    <string name="action_exit">Exit</string>
    <string name="action_local_ota">SD card update</string>
    <string name="action_pop_about">About</string>
    <string name="action_pop_my_bracelet">Mi Band Settings</string>
    <string name="action_pop_person_info">My Profile</string>
    <string name="action_pop_smart_alarms">Alarm</string>
    <string name="action_pop_unlock_screen">Screen Unlock</string>
    <string name="action_pop_weixin_enter">Sync with Wechat</string>
    <string name="age">Age</string>
    <string name="ages">years</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_cycle">Repeat</string>
    <string name="alarm_device_not_connect">Please pair with a Mi Band before set Alarm.</string>
    <string name="alarm_once">Once</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_repeat_title_format">Selected %s</string>
    <string name="alarm_ring">Alarm</string>
    <string name="alarm_setting">Alarm Setting</string>
    <string name="am">AM</string>
    <string name="apk_download_ok">Mi Band app download complete.</string>
    <string name="apk_uptodate">You are currently using the latest version.</string>
    <string name="app_exit_press_again">Tap back key again to exit</string>
    <string name="app_info_version">"Version: %1$s
Agreement: %2$s"</string>
    <string name="app_name">Mi Band</string>
    <string name="awake_format">, awake %1$s times.</string>
    <string name="awake_format_1">, awake once.</string>
    <string name="back">Back</string>
    <string name="battery_charge_full">Battery charged</string>
    <string name="battery_charging">Charging...</string>
    <string name="battery_low_info">Battery low, please charge.</string>
    <string name="before_min">%s min. ago</string>
    <string name="bin_weixin_device_not_connect">Mi Band not connected.</string>
    <string name="bind_bracelet">Found Mi Band</string>
    <string name="bind_bracelet_ok">Paired successfully.</string>
    <string name="bind_new_mili">Pair with new Mi Band</string>
    <string name="bind_weixin_failed">Failed, please retry.</string>
    <string name="bind_weixin_new_disable_tips">"After link with your Wechat account and follow Mi Band's Wechat service account, 
you can check information like the number of steps taken through Wechat. You can also see your result status among your friends."</string>
    <string name="bind_weixin_new_now">Syncing with Wechat, one moment...</string>
    <string name="bind_weixin_new_tips">"Tap Link with Wechat to start, 
then tap Follow to complete sync."</string>
    <string name="bind_weixin_now">Generating QR code ...</string>
    <string name="bind_weixin_qrcode_name">Mi Band QR code</string>
    <string name="bind_weixin_save">Saved in Gallery,</string>
    <string name="bind_weixin_succ">Successfully linked!</string>
    <string name="bind_weixin_tips_1">Tap Generate QR code, generate and save a QR code in Gallery.</string>
    <string name="bind_weixin_tips_2">Tap Open Wechat, enter Scan QR code and tap Album to select the QR code saved.</string>
    <string name="bind_weixin_title">Sync to share and compete with friends.</string>
    <string name="blue">Blue</string>
    <string name="bluetooth">Bluetooth </string>
    <string name="bmenu_device">Devices</string>
    <string name="bmenu_dynamic">Updates</string>
    <string name="bmenu_my">Me</string>
    <string name="bracelet_info_battery">%s%%</string>
    <string name="bracelet_info_deviceid">%s</string>
    <string name="bracelet_info_fw_version">"Firmware: %1$s
Agreement: %2$s"</string>
    <string name="bracelet_info_mac_address">"Name: %1$s
Address: %2$s"</string>
    <string name="bracelet_login_info">Mi Cloud will provide professional suggestions based on your activities and sleep performance.</string>
    <string name="bracelet_login_info_2">Login if you agree to </string>
    <string name="bracelet_login_title">Hello, I am Mi Band.</string>
    <string name="bracelet_not_connected_bat_unknown">Mi Band not paired, power unknown.</string>
    <string name="bracelet_not_found_info">Please search again when you see one of the Mi Band lights flashes.</string>
    <string name="bracelet_not_found_title">Please connect to power.</string>
    <string name="bt_operation_failed_tips">Bluetooth is not working properly, please try later.</string>
    <string name="cal">cal</string>
    <string name="cancel">Cancel</string>
    <string name="check_upgrade">Check for updates</string>
    <string name="checking_new_apk">Checking for new update ...</string>
    <string name="clock_closed">Off</string>
    <string name="cm">cm</string>
    <string name="come_from_xiaomi_bracelet">From Mi Band</string>
    <string name="confirm">Confirm</string>
    <string name="congrats">Congrats!</string>
    <string name="connect_bracelet_now">Connecting ...</string>
    <string name="content_too_short">Content is missing.</string>
    <string name="continue_reach_goal">Hit Goals</string>
    <string name="continue_reach_goal_new_record">Created new record</string>
    <string name="continue_tips_format">Your best record is to hit your goal for %1$s days.</string>
    <string name="daily_sporty">Steps per day</string>
    <string name="date_from_to">%1$s to %2$s</string>
    <string name="date_from_to_short">%1$s-%2$s</string>
    <string name="date_last_month">Last month</string>
    <string name="date_last_week">Last week</string>
    <string name="date_month">MMMM</string>
    <string name="date_month_day">MMM d</string>
    <string name="date_month_day_short">%1$d/%2$d</string>
    <string name="date_month_day_week">%1$s %2$s</string>
    <string name="date_month_day_week_short">%1$d.%2$d %3$s</string>
    <string name="date_this_month">This month</string>
    <string name="date_this_week">This week</string>
    <string name="date_today">Today</string>
    <string name="date_year_month">MMM, yyyy</string>
    <string name="date_year_month_day">MMM d, yyyy</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="day">days</string>
    <string name="day_active_detail">Daily details</string>
    <string name="description_list_icon">Item Icon</string>
    <string name="device_list">Nearby Mi Bands</string>
    <string name="device_not_found_not_knocked">Please search again after tap Mi Band once it flashes.</string>
    <string name="device_not_response">"Why didn't my Mi Band flash?"</string>
    <string name="disable_debug_log">Debug mode closed！</string>
    <string name="discard">Discard</string>
    <string name="discard_alarm_change">Discard changes？</string>
    <string name="distance">Distance</string>
    <string name="donot_bind">Pair later</string>
    <string name="download_failed">Failed to download APK.</string>
    <string name="downloading_apk">Mi Band</string>
    <string name="dynamic_detail_modify_sleep_end_time">Correct awake time</string>
    <string name="dynamic_detail_modify_sleep_start_time">Correct sleep starting time</string>
    <string name="dynamic_detail_sleep_title">%s</string>
    <string name="dynamic_detail_sleep_title_yesterday">Last night sleep</string>
    <string name="dynamic_detail_step_share_title">%s activity</string>
    <string name="dynamic_detail_step_title">%s</string>
    <string name="dynamic_detail_step_title_today">Today</string>
    <string name="dynamic_pull_connect_failed">Failed to connect, please pull to retry.</string>
    <string name="dynamic_pull_connect_failed_hint">Make sure your Mi Band has enough power.</string>
    <string name="dynamic_pull_connecting_bracelet">Connecting Mi Band ...</string>
    <string name="dynamic_pull_last_sync_time">Last synced %s</string>
    <string name="dynamic_pull_not_sync_today">Not synced today.</string>
    <string name="dynamic_pull_pull_to_sync">Pull to sync details</string>
    <string name="dynamic_pull_release_to_sync">Release to sync</string>
    <string name="dynamic_pull_sync_after_connected">Automatically sync once connected.</string>
    <string name="dynamic_pull_sync_error">Failed to sync, pull to refresh.</string>
    <string name="dynamic_pull_syncing">Syncing ...</string>
    <string name="dynamic_pull_syncing_progress">Synced %s%%</string>
    <string name="dynamic_pull_update_report">Updated %s records</string>
    <string name="dynamic_sleep_active">Awake time</string>
    <string name="dynamic_sleep_active_end">Ready to get up</string>
    <string name="dynamic_sleep_active_start">Ready to sleep</string>
    <string name="dynamic_sleep_deep">Deep Sleep</string>
    <string name="dynamic_sleep_deep_title">Deep Sleep %s</string>
    <string name="dynamic_sleep_shallow">Light Sleep</string>
    <string name="dynamic_sleep_tip">Total</string>
    <string name="dynamic_step_tip">Current Steps</string>
    <string name="dynamic_tip_sleep_unsynced">Not updated</string>
    <string name="dynamic_tip_step_sync_time_hour">%d hr ago</string>
    <string name="dynamic_tip_step_sync_time_min">%d min ago</string>
    <string name="dynamic_tip_step_unsynced">Not updated</string>
    <string name="dynamic_tip_sync_progress">Syncing data %d%%</string>
    <string name="dynamic_tip_sync_time">%s synced</string>
    <string name="dynamic_tip_unweared">Not activated</string>
    <string name="dynamic_title_sleep">Last night</string>
    <string name="dynamic_title_step">Today</string>
    <string name="enable_debug_log">Debug mode opened！</string>
    <string name="error_code">Error</string>
    <string name="everyday">Everyday</string>
    <string name="exit_app">Exit</string>
    <string name="exit_app_continue">Continue</string>
    <string name="exit_app_tips">"Are you sure to logout? 
Connection will be lost after logout."</string>
    <string name="exit_login">Logout</string>
    <string name="exit_login_1">Are you sure to logout?</string>
    <string name="failed_enable_bt">Please turn on Bluetooth.</string>
    <string name="feedback">Feedback</string>
    <string name="female">Female</string>
    <string name="find_bracelet">Search for Mi Band</string>
    <string name="find_bracelet_warning">Power will lost quickly in finding Mi Band.</string>
    <string name="finding_bracelet">Searching for Mi Band ...</string>
    <string name="firmware_upgrade">Firmware update</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="first_use_days_today_format">Less than one day from first use.</string>
    <string name="first_use_remain_days_format">%s days from first use</string>
    <string name="found_bracelet_info">"When Mi Band's lights start flashing, tap a few times to pair."</string>
    <string name="friends_invite2">Invite</string>
    <string name="friends_search">Search</string>
    <string name="friends_search_tips">Mi Account/Username/Phone</string>
    <string name="fw_failed_help_tips0">Firmware is the software system operates Mi Band device.</string>
    <string name="fw_failed_help_tips1">Update firmware can improve Mi Band performance. It also will support device to run new features.</string>
    <string name="fw_upgrade_failed">Firmware failed to update.</string>
    <string name="fw_upgrade_failed_tips">Sorry, firmware failed to update. This will disable a part of features.</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="move_and_capture">Move and Capture</string>
    <string name="new_version_available">Found a new version</string>
    <string name="register">Sign up</string>
    <string name="retry">Retry</string>
    <string name="unit_hour">h</string>
    <string name="unit_meter">m</string>
    <string name="unit_min">min</string>
    <string name="unit_step">steps</string>
    <string name="upgrade">Update</string>
</resources>