<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/dialog_empty_area" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#fff4f5f5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dialog_title_margin_bottom"
                android:layout_marginTop="10.0dip"
                android:text="@string/fw_upgrade_failed"
                android:textColor="@color/alert_color"
                android:textSize="19.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:gravity="center"
                android:text="@string/fw_upgrade_failed_tips"
                android:textColor="#ff919394"
                android:textSize="@dimen/info_content_size" />
        </LinearLayout>

        <cn.com.smartdevices.bracelet.ui.widget.DimPanelBottomBar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/help"
            app:right_text="@string/retry" />
    </LinearLayout>
</LinearLayout>