<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/dialog_empty_area" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#fff4f5f5"
        android:orientation="vertical"
        android:paddingTop="15.0dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_title_margin_bottom"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:text="@string/discard_alarm_change"
            android:textColor="@color/main_ui_title_color"
            android:textSize="@dimen/main_ui_dialog_title_size" />

        <cn.com.smartdevices.bracelet.ui.widget.DimPanelBottomBar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/cancel"
            app:left_text_color="@color/button_confirm_color"
            app:right_text="@string/discard"
            app:right_text_color="@color/button_cancel_color" />
    </LinearLayout>
</LinearLayout>