<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff0d0d0d"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_h"
        android:gravity="center"
        android:text="@string/move_and_capture"
        android:textColor="@color/title_color"
        android:textSize="@dimen/main_ui_title_size" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="@drawable/texture">

        <com.edmodo.cropper.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@id/CropImageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            custom:aspectRatioX="1"
            custom:aspectRatioY="1"
            custom:fixAspectRatio="true"
            custom:guidelines="off" />
    </RelativeLayout>

  <cn.com.smartdevices.bracelet.ui.widget.DimPanelBottomBar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@id/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20.0dip"
        app:left_text="@string/cancel"
        app:left_text_color="@color/content_color"
        app:right_text="@string/confirm"
        app:right_text_color="@color/title_color"
        app:show_style="dark" />
</LinearLayout>