<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@id/bracelet_login_title_id"
            style="@style/InfoTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_title_margin_bottom"
            android:alpha="0.0"
            android:text="@string/bracelet_login_title" />

        <WebView
            android:id="@id/bracelet_login_webview"
            android:layout_width="180.0dip"
            android:layout_height="320.0dip"
            android:layout_below="@id/bracelet_login_title_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20.0dip"
            android:scrollbars="none" />

        <TextView
            android:id="@id/bracelet_login_title_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bracelet_login_title_id"
            android:layout_centerHorizontal="true"
            android:alpha="0.0"
            android:gravity="center"
            android:paddingLeft="45.0dip"
            android:paddingRight="45.0dip"
            android:text="@string/bracelet_login_info"
            android:textColor="@color/content_color"
            android:textSize="@dimen/info_content_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@id/bracelet_login_part_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@id/bracelet_login_info_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/mi_login_btn"
            android:layout_centerHorizontal="true"
            android:alpha="0.0"
            android:gravity="center"
            android:paddingBottom="27.0dip"
            android:paddingTop="70.29999dip"
            android:textColor="@color/content_color"
            android:textSize="@dimen/info_content_size" />

        <Button
            android:id="@id/mi_login_btn"
            android:layout_width="@dimen/click_button_w"
            android:layout_height="@dimen/click_button_h"
            android:layout_above="@id/mi_register_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13.0dip"
            android:alpha="0.0"
            android:background="@drawable/click_btn_bg"
            android:text="@string/login"
            android:textColor="@color/title_color"
            android:textSize="@dimen/click_button_text_size" />

        <Button
            android:id="@id/mi_register_btn"
            android:layout_width="@dimen/click_button_w"
            android:layout_height="@dimen/click_button_h"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/info_bottom_margin_bottom"
            android:alpha="0.0"
            android:background="@drawable/click_btn_bg"
            android:text="@string/register"
            android:textColor="@color/content_color"
            android:textSize="@dimen/click_button_text_size" />
    </LinearLayout>
</RelativeLayout>