<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/float_step_info"
    android:layout_width="wrap_content"
    android:layout_height="30.0dip"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="24.0dip"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <cn.com.smartdevices.bracelet.chart.typeface.TypefaceTextView
            android:id="@id/float_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="miui"
            android:text="--"
            android:textColor="#ccffffff"
            android:textSize="22.0sp" />

        <TextView
            android:id="@id/info_step_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.0dip"
            android:layout_marginTop="-2.0dip"
            android:text="@string/unit_step"
            android:textColor="#80ffffff"
            android:textSize="@dimen/dynamic_info_title" />
    </LinearLayout>

    <View
        android:layout_width="1.0dip"
        android:layout_height="16.5dip"
        android:layout_marginLeft="25.0dip"
        android:layout_marginRight="25.0dip"
        android:background="#33ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <cn.com.smartdevices.bracelet.chart.typeface.TypefaceTextView
            android:id="@id/float_step_time_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="miui"
            android:text="--"
            android:textColor="#ccffffff"
            android:textSize="22.0sp" />

        <TextView
            android:id="@id/info_step_time_unit_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.0dip"
            android:layout_marginRight="2.0dip"
            android:layout_marginTop="-1.5dip"
            android:text="@string/unit_hour"
            android:textColor="#80ffffff"
            android:textSize="@dimen/dynamic_info_title" />

        <cn.com.smartdevices.bracelet.chart.typeface.TypefaceTextView
            android:id="@id/float_step_time_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="miui"
            android:text="--"
            android:textColor="#ccffffff"
            android:textSize="22.0sp" />

        <TextView
            android:id="@id/info_step_time_unit_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.0dip"
            android:layout_marginTop="-1.5dip"
            android:text="@string/unit_min"
            android:textColor="#80ffffff"
            android:textSize="@dimen/dynamic_info_title" />
    </LinearLayout>

    <View
        android:layout_width="1.0dip"
        android:layout_height="16.5dip"
        android:layout_marginLeft="25.0dip"
        android:layout_marginRight="25.0dip"
        android:background="#33ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <cn.com.smartdevices.bracelet.chart.typeface.TypefaceTextView
            android:id="@id/float_step_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="miui"
            android:text="--"
            android:textColor="#ccffffff"
            android:textSize="22.0sp" />

        <TextView
            android:id="@id/info_step_distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.0dip"
            android:layout_marginTop="-1.5dip"
            android:text="@string/unit_meter"
            android:textColor="#80ffffff"
            android:textSize="@dimen/dynamic_info_title" />
    </LinearLayout>
</LinearLayout>